syntax = "proto3";

package order;

option go_package = "/proto";

import "product.proto";

service OrderService {
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {}
    rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse) {}

    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
    rpc ChangeOrderStatus(ChangeOrderStatusRequest) returns (ChangeOrderStatusResponse) {}
    
    rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse) {}


}

enum EnumStatus {
    UNKNOWN = 0;
    PENDING = 1;
    COMPLETED = 2;
    CANCELLED = 3;
}


message SelectedProduct {
    string id = 1;
    int32 quantity = 2;
}

message Order {
    string id = 1;
    repeated SelectedProduct products = 2;
    EnumStatus status = 3;
}
message CompleteOrder {
    string id = 1;
    repeated product.Product products = 2;
    double total = 3;
    EnumStatus status = 4;
}

message GetOrderRequest {
    string id = 1;
}
message GetOrderResponse {
    CompleteOrder order = 1;
}

message ListOrdersRequest {}
message ListOrdersResponse {
    repeated CompleteOrder orders = 1;
}

message CreateOrderRequest {
    repeated SelectedProduct products = 1;
}
message CreateOrderResponse {
    CompleteOrder order = 1;
}

message ChangeOrderStatusRequest {
    EnumStatus status = 1;
    string id = 2;
}
message ChangeOrderStatusResponse {
    CompleteOrder order = 1;
}

message CancelOrderRequest {
    string id = 1;
}
message CancelOrderResponse {
    bool success = 1;
}
